dep/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: material-management-api
spec:
  selector:
    matchLabels:
      run: material-management-api
  replicas: 1
  template:
    metadata:
      labels:
        run: material-management-api
    spec:
      containers:
      - name: material-management-api
        image: changekaid0ck3r/material-management-api:1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 128M
          limits:
            cpu: 400m
            memory: 512M
            ephemeral-storage: 256M
        ports:
        - containerPort: 8080
          name: http
